Add FadeOut delay animation to MouseLeave

MouseLeave should cause a scrollbar fade. This patch we add a
|PostDelayedAnimationTask| call at the bottom of
|ScrollbarAnimationController::DidMouseLeave|.

BUG=689166
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2688503003
Cr-Commit-Position: refs/heads/master@{#449994}

Former-commit-id: 71bfc364fbfcfd07810b71eaf1374e8a13e447bb